# tamingLLMs

./: .gitignore  CITATION.cff  CNAME  LICENSE.md  Makefile  README.md  TESTIMONIALS.md  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: chapter-review-template.md  general-feedback.md  review-template.md
.github/workflows/: static.yml
tamingLLMs/: _config.yml
tamingLLMs/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
tamingLLMs/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html
tamingLLMs/_build/jupyter_execute/: markdown-notebooks.ipynb
tamingllms/: _config.yml  _toc.yml  intro.md  nondeterminism-NOTES.md  output_size_limit-NOTES.md  output_size_limit.ipynb  references.bib  requirements.txt
tamingllms/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  nondeterminism-NOTES.doctree  nondeterminism.doctree  notebooks.doctree  output_size_limit-NOTES.doctree  output_size_limit.doctree
tamingllms/_build/html/: .buildinfo  genindex.html  index.html  intro.html  markdown-notebooks.html  markdown.html  nondeterminism-NOTES.html  nondeterminism.html  notebooks.html  objects.inv  output_size_limit-NOTES.html  output_size_limit.html  search.html  searchindex.js
tamingllms/_build/jupyter_execute/: markdown-notebooks.ipynb  nondeterminism.ipynb  output_size_limit.ipynb
tamingllms/_static/: default.css
tamingllms/_static/cost/: quantized.tsx
tamingllms/_static/evals/: conceptual.d2  llmjudge.d2
tamingllms/_static/local/: ppl.tsx  tg.tsx
tamingllms/data/: aapl.html  apple.txt  apple_report.md
tamingllms/latex/: alignment.tex  evals.tex  input.tex  intro.tex  local.tex  main.aux  main.bbl  main.bcf  main.blg  main.idx  main.ilg  main.ind  main.lof  main.lot  main.run.xml  main.tex  main.toc  main.xdy  preface.tex  safety.tex  structured_output.tex
tamingllms/markdown/: alignment.md  appendix_a.md  evals.md  frontiers.md  input.md  intro.md  local.md  markdown.md  output_size_limit.md  preface.md  safety.md  structured_output.md  toc.md
tamingllms/notebooks/: alignment.ipynb  batch_results.jsonl  cost.ipynb  evals.ipynb  input.ipynb  local.ipynb  nondeterminism.ipynb  output_size_limit.ipynb  safety.ipynb  structured_output.ipynb  structured_output_original.ipynb  taming_utils.py
(+430 files in other folders)
