[tool.poetry]
name = "tamingllms"
version = "0.1.0"
description = "accompanying package to \"Taming Language Models\" book"
authors = ["Tharsis T. P. Souza"]
license = "Attribution-NonCommercial-ShareAlike 4.0 International"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^1.0.3"
pandas = "^2.2.3"
openai = "^1.54.4"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
langchain = "^0.3.7"
tiktoken = "^0.8.0"
langchain-community = "^0.3.7"
litellm = "^1.52.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
